--- a/smart india hackathon/package.json
+++ b/smart india hackathon/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^7.5.2",
+    "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1"
   }
 }
